# nfactorial

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  NEW_DESIGN.md  README.md  V2_DESIGN.md  VERIFICATION_PLAN.md  docker-compose.yml  llms.py  observability.py  orchestrator.py  pyproject.toml  requirements.txt  server.py  worker.py
.github/workflows/: ci.yaml
agent/: agent.py  context.py  events.py  llms.py  logging.py  manager.py  observability.py  queue.py  utils.py
agent/dashboard/: dashboard.html  dashboard.js  routes.py
agent/scripts/: __init__.py  _loader.py  backoff.lua  batch_move.lua  cancellation.lua  completion.lua  enqueue.lua  expiration.lua  garbage_collection.lua  heartbeat.lua  metrics.lua  pickup.lua  recovery.lua  stale_recovery.lua  steering.lua  tool_completion.lua
docs/: .gitignore  .vercelignore  docusaurus.config.ts  package-lock.json  requirements.txt  server.py  sidebars.ts  vercel.json
docs/agent/: agent-base.md  agent-create.yaml  agent-edit.yaml
docs/api/: index.py
docs/docs/: agents.md  batching.md  context.md  events.md  examples.md  intro.md  orchestrator.md  quickstart.md  subagents.md  tools.md
docs/docs/examples/: _example_table.md  _example_use_agent_events.md  basic_agent.md  code_agent.md  code_agent_ui.md  multi_agent.md  use_agent_events.md
docs/src/css/: custom.css
examples/basic/: Dockerfile.agent  Dockerfile.server  README.md  agent.py  docker-compose.yml  requirements.txt  server.py
examples/basic/ui/: package-lock.json
examples/code_agent/: Dockerfile.agent  Dockerfile.server  README.md  agent.py  docker-compose.yml  requirements.txt  server.py
examples/code_agent/ui/: package-lock.json
examples/code_agent/ui/src/: App.tsx  main.tsx
examples/multi_agent/: Dockerfile.agent  Dockerfile.server  README.md  agent.py  docker-compose.yml  requirements.txt  server.py
examples/multi_agent/ui/src/: App.tsx  constants.ts  index.css
src/factorial/: __init__.py  agent.py  context.py  events.py  exceptions.py  hooks.py  llms.py  logging.py  orchestrator.py  queue.py  subagents.py  task.py  tools.py  utils.py  waits.py
src/factorial/cli/: __init__.py  agent.py  constants.py  event_printer.py  key_storage.py  main.py
src/factorial/cli/agent/: __init__.py  agent-base.md  agent-edit.yaml  agent.py  prefetch.py
src/factorial/dashboard/: __init__.py  dashboard.html  dashboard.js  routes.py
src/factorial/lua/: __init__.py  _loader.py  cancellation.lua  completion.lua  pickup.lua  recovery.lua  steering.lua
src/factorial/queue/: __init__.py  keys.py  maintenance.py  operations.py  task.py  worker.py
src/factorial/queue/lua/: __init__.py  _loader.py  backoff.lua  cancellation.lua  child_completion.lua  completion.lua  enqueue.lua  enqueue_batch.lua  expiration.lua  hook_resolve.lua  hook_wake.lua  pickup.lua  recovery.lua  resume_enqueue.lua  resume_idempotency.lua  schedule_wait.lua  scheduled.lua  shared.lua  steering.lua  tool_completion.lua
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_multi_agent.py  test_verification_flow.py  test_worker_flow.py
tests/integration/: conftest.py  test_batch_children.py  test_cancellation.py  test_completion.py  test_edge_cases.py  test_enqueue.py  test_hook_lifecycle.py  test_hooks_phase3.py  test_parent_child.py  test_pending.py  test_recovery.py  test_resume.py  test_steering.py  test_wait_runtime.py  test_waits_phase5.py
tests/mocks/: __init__.py  llm.py
tests/unit/: test_event_printer.py  test_hook_api_contracts.py  test_hook_dependency_compiler.py  test_keys.py  test_phase1_api_scaffolding.py  test_phase2_hook_compiler.py  test_subagent_contracts.py  test_subagents_phase5.py  test_task.py  test_tool_contracts.py  test_tools_phase0_regression.py  test_verifier_contracts.py  test_wait_contracts.py  test_waits_phase5.py  test_worker_utils.py
ui/: package.json
ui/src/: App.tsx  App_delibs.jsx  index.css
ui/src/components/: InputArea.tsx  ThinkingDropdown.tsx  ToolResult.tsx
ui/src/hooks/: useWebSocket.ts
(+32 files in other folders)
