[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfactorial"
version = "0.1.31"
description = "A distributed task queue for building reliable multi-agent systems."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.81.0",
    "pydantic>=2.10,<3",
    "redis>=6.1.0",
    "fastapi>=0.110.0,<1",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
    "click>=8.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "black",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
cli = [
    "inquirer>=3.2.4",
]

[project.scripts]
nfactorial = "factorial.cli.main:cli"

[project.urls]
Homepage = "https://factorial.sh"
Repository = "https://github.com/ricardo-agz/nfactorial"
Documentation = "https://factorial.sh"
Issues = "https://github.com/ricardo-agz/nfactorial/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
factorial = [
    "queue/lua/*.lua",
    "dashboard/*.html",
    "dashboard/*.js",
    "dashboard/assets/*",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["factorial"]
src_paths = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["factorial"] }